Polish GLRA web messaging (English fallbacks, GLRA-styled start/stop, skip initiator), add player autocomplete for token commands, and introduce a TODO backlog for future features
- Style web server start/stop responses with GLRA prefix/colors, clearer fallbacks (“GLRA web server started/stopped”).

- Add online-player suggestions for /gl web token add/remove; fix PlayerList API call.

- Switch rollback notifications to English defaults and skip notifying the initiator; web UI defaults also in English.

- Add TODO.md capturing rollback undo, unified messaging, GriefLogger independence, multi-version support, mod API ideas, and other future tasks.

--- a/src/main/resources/assets/griefloggerrollbackaddon/lang/en_us.json
+++ b/src/main/resources/assets/griefloggerrollbackaddon/lang/en_us.json
@@ -41,5 +41,42 @@
   "message.griefloggerrollbackaddon.actionbar.status.cancelling": "cancelling",
   "message.griefloggerrollbackaddon.actionbar.status.done": "done",
   "message.griefloggerrollbackaddon.actionbar.status.cancelled": "cancelled",
-  "message.griefloggerrollbackaddon.actionbar.status.failed": "failed"
+  "message.griefloggerrollbackaddon.actionbar.status.failed": "failed",
+  "web.title": "Rollback from the Browser",
+  "web.subtitle": "Fill in the fields, optional token, then click \"Start rollback\".",
+  "web.time": "Time window (e.g. 30m, 12h, 90s)",
+  "web.player": "Player (optional, exact name)",
+  "web.blocks": "Blocks (B)",
+  "web.items": "Items (I)",
+  "web.radius": "Radius (optional, empty = none)",
+  "web.radiusUnit.blocks": "Blocks",
+  "web.radiusUnit.chunks": "Chunks",
+  "web.centerX": "Center X (radius)",
+  "web.centerZ": "Center Z (radius)",
+  "web.centerY": "Center Y (optional, default 64)",
+  "web.dimension": "Dimension (optional, e.g. minecraft:overworld)",
+  "web.token": "Token (if configured)",
+  "web.submit": "Start rollback",
+  "web.sending": "Sending...",
+  "message.griefloggerrollbackaddon.web.token.created.title": "Web token created",
+  "message.griefloggerrollbackaddon.web.token.created.player": "Player: ",
+  "message.griefloggerrollbackaddon.web.token.created.token": "Token: ",
+  "message.griefloggerrollbackaddon.web.token.created.copy": "[copy]",
+  "message.griefloggerrollbackaddon.web.token.removed": "Removed token for %s",
+  "message.griefloggerrollbackaddon.web.token.not_found": "No token found for %s",
+  "message.griefloggerrollbackaddon.web.token.list.title": "Web tokens (page %s)",
+  "message.griefloggerrollbackaddon.web.token.list.empty": "No tokens available.",
+  "message.griefloggerrollbackaddon.web.token.list.copy_hint": "Click to copy token",
+  "message.griefloggerrollbackaddon.web.server.started": "Web server started",
+  "message.griefloggerrollbackaddon.web.server.stopped": "Web server stopped",
+  "message.griefloggerrollbackaddon.web.server.already_running": "Web server already running",
+  "message.griefloggerrollbackaddon.web.server.not_running": "Web server is not running",
+  "message.griefloggerrollbackaddon.web.server.disabled": "Web UI/API disabled via config",
+  "message.griefloggerrollbackaddon.web.server.token_missing": "Cannot start: requireApiToken=true but webApiToken is empty",
+  "message.griefloggerrollbackaddon.web.server.manager_null": "Cannot start: rollback manager not initialized",
+  "message.griefloggerrollbackaddon.web.server.addon_disabled": "Addon disabled",
+  "message.griefloggerrollbackaddon.web.server.start_failed": "Failed to start web server: %s",
+  "message.griefloggerrollbackaddon.web.server.stop_failed": "Failed to stop web server: %s",
+  "message.griefloggerrollbackaddon.config.reload.ok": "Config reloaded",
+  "message.griefloggerrollbackaddon.config.reload.fail": "Config reload failed: %s"
 }
