--- a/src/main/resources/assets/griefloggerrollbackaddon/lang/de_de.json
+++ b/src/main/resources/assets/griefloggerrollbackaddon/lang/de_de.json
@@ -1,14 +1,14 @@
 {
   "message.griefloggerrollbackaddon.rollback.usage": "Verwendung: /gl rollback u:<user> t:<zeit (s|m|h|d|M|y)> r:<radius|c<chunks>> [i|b]",
-  "message.griefloggerrollbackaddon.rollback.disabled": "Rollback-Addon ist deaktiviert, da beim Start keine Datenbankverbindung verfügbar war",
+  "message.griefloggerrollbackaddon.rollback.disabled": "Rollback-Addon ist deaktiviert, da beim Start keine Datenbankverbindung verf\u00fcgbar war",
   "message.griefloggerrollbackaddon.rollback.not_initialized": "Rollback-Manager nicht initialisiert",
   "message.griefloggerrollbackaddon.rollback.parse.duplicate_kind": "Doppeltes Block/Item-Argument",
-  "message.griefloggerrollbackaddon.rollback.parse.invalid_argument": "Ungültiges Argument: %s",
+  "message.griefloggerrollbackaddon.rollback.parse.invalid_argument": "Ung\u00fcltiges Argument: %s",
   "message.griefloggerrollbackaddon.rollback.parse.duplicate_user": "Doppeltes Spieler-Argument",
   "message.griefloggerrollbackaddon.rollback.parse.duplicate_time": "Doppeltes Zeit-Argument",
-  "message.griefloggerrollbackaddon.rollback.parse.invalid_time": "Ungültiger Zeitwert: %s",
+  "message.griefloggerrollbackaddon.rollback.parse.invalid_time": "Ung\u00fcltiger Zeitwert: %s",
   "message.griefloggerrollbackaddon.rollback.parse.duplicate_radius": "Doppeltes Radius-Argument",
-  "message.griefloggerrollbackaddon.rollback.parse.invalid_radius": "Ungültiger Radius-Wert: %s",
+  "message.griefloggerrollbackaddon.rollback.parse.invalid_radius": "Ung\u00fcltiger Radius-Wert: %s",
   "message.griefloggerrollbackaddon.rollback.parse.unknown_argument": "Unbekanntes Argument: %s",
   "message.griefloggerrollbackaddon.rollback.parse.missing_time": "Fehlendes Zeit-Argument (t:)",
   "message.griefloggerrollbackaddon.rollback.started": "Rollback gestartet",
@@ -16,12 +16,12 @@
   "message.griefloggerrollbackaddon.rollback.window.value": "letzte %s",
   "message.griefloggerrollbackaddon.rollback.player.label": "Spieler: ",
   "message.griefloggerrollbackaddon.rollback.radius.label": "Radius: ",
-  "message.griefloggerrollbackaddon.rollback.radius.value.blocks": "%s Blöcke",
+  "message.griefloggerrollbackaddon.rollback.radius.value.blocks": "%s Bl\u00f6cke",
   "message.griefloggerrollbackaddon.rollback.radius.value.chunks": "%s Chunks",
   "message.griefloggerrollbackaddon.rollback.scope.label": "Bereich: ",
-  "message.griefloggerrollbackaddon.rollback.scope.blocks_only": "nur Blöcke",
+  "message.griefloggerrollbackaddon.rollback.scope.blocks_only": "nur Bl\u00f6cke",
   "message.griefloggerrollbackaddon.rollback.scope.items_only": "nur Items",
-  "message.griefloggerrollbackaddon.rollback.scope.both": "Blöcke + Items",
+  "message.griefloggerrollbackaddon.rollback.scope.both": "Bl\u00f6cke + Items",
   "message.griefloggerrollbackaddon.actionbar.done": "Rollback abgeschlossen",
   "message.griefloggerrollbackaddon.actionbar.failed": "Rollback fehlgeschlagen",
   "message.griefloggerrollbackaddon.actionbar.cancelled": "Rollback abgebrochen",
@@ -36,10 +36,47 @@
   "message.griefloggerrollbackaddon.actionbar.radius": "R:%s",
   "message.griefloggerrollbackaddon.actionbar.scope": "Bereich:%s",
   "message.griefloggerrollbackaddon.actionbar.errors": "Fehler:%s",
-  "message.griefloggerrollbackaddon.actionbar.status.running": "läuft",
-  "message.griefloggerrollbackaddon.actionbar.status.loading": "lädt",
+  "message.griefloggerrollbackaddon.actionbar.status.running": "l\u00e4uft",
+  "message.griefloggerrollbackaddon.actionbar.status.loading": "l\u00e4dt",
   "message.griefloggerrollbackaddon.actionbar.status.cancelling": "bricht ab",
   "message.griefloggerrollbackaddon.actionbar.status.done": "fertig",
   "message.griefloggerrollbackaddon.actionbar.status.cancelled": "abgebrochen",
-  "message.griefloggerrollbackaddon.actionbar.status.failed": "fehlgeschlagen"
+  "message.griefloggerrollbackaddon.actionbar.status.failed": "fehlgeschlagen",
+  "web.title": "Rollback aus dem Browser",
+  "web.subtitle": "Felder ausf\u00fcllen, optional Token, dann \"Rollback starten\" dr\u00fccken.",
+  "web.time": "Zeitfenster (z. B. 30m, 12h, 90s)",
+  "web.player": "Spieler (optional, exakter Name)",
+  "web.blocks": "Bl\u00f6cke (B)",
+  "web.items": "Items (I)",
+  "web.radius": "Radius (optional, leer = keiner)",
+  "web.radiusUnit.blocks": "Bl\u00f6cke",
+  "web.radiusUnit.chunks": "Chunks",
+  "web.centerX": "Center X (Radius)",
+  "web.centerZ": "Center Z (Radius)",
+  "web.centerY": "Center Y (optional, Standard 64)",
+  "web.dimension": "Dimension (optional, z. B. minecraft:overworld)",
+  "web.token": "Token (falls konfiguriert)",
+  "web.submit": "Rollback starten",
+  "web.sending": "Sende...",
+  "message.griefloggerrollbackaddon.web.token.created.title": "Web-Token erstellt",
+  "message.griefloggerrollbackaddon.web.token.created.player": "Spieler: ",
+  "message.griefloggerrollbackaddon.web.token.created.token": "Token: ",
+  "message.griefloggerrollbackaddon.web.token.created.copy": "[kopieren]",
+  "message.griefloggerrollbackaddon.web.token.removed": "Token für %s entfernt",
+  "message.griefloggerrollbackaddon.web.token.not_found": "Kein Token für %s gefunden",
+  "message.griefloggerrollbackaddon.web.token.list.title": "Web-Tokens (Seite %s)",
+  "message.griefloggerrollbackaddon.web.token.list.empty": "Keine Tokens vorhanden.",
+  "message.griefloggerrollbackaddon.web.token.list.copy_hint": "Zum Kopieren klicken",
+  "message.griefloggerrollbackaddon.web.server.started": "Webserver gestartet",
+  "message.griefloggerrollbackaddon.web.server.stopped": "Webserver gestoppt",
+  "message.griefloggerrollbackaddon.web.server.already_running": "Webserver l\u00e4uft bereits",
+  "message.griefloggerrollbackaddon.web.server.not_running": "Webserver l\u00e4uft nicht",
+  "message.griefloggerrollbackaddon.web.server.disabled": "Web-UI/API ist \u00fcber die Konfiguration deaktiviert",
+  "message.griefloggerrollbackaddon.web.server.token_missing": "Kann nicht starten: requireApiToken=true aber webApiToken ist leer",
+  "message.griefloggerrollbackaddon.web.server.manager_null": "Kann nicht starten: Rollback-Manager nicht initialisiert",
+  "message.griefloggerrollbackaddon.web.server.addon_disabled": "Addon deaktiviert",
+  "message.griefloggerrollbackaddon.web.server.start_failed": "Webserver konnte nicht gestartet werden: %s",
+  "message.griefloggerrollbackaddon.web.server.stop_failed": "Webserver konnte nicht gestoppt werden: %s",
+  "message.griefloggerrollbackaddon.config.reload.ok": "Config neu geladen",
+  "message.griefloggerrollbackaddon.config.reload.fail": "Config konnte nicht neu geladen werden: %s"
 }
