--- a/src/main/resources/assets/griefloggerrollbackaddon/lang/de_de.json
+++ b/src/main/resources/assets/griefloggerrollbackaddon/lang/de_de.json
@@ -1,4 +1,6 @@
 {
+  "message.griefloggerrollbackaddon.prefix": "[GLRA] ",
+  "message.griefloggerrollbackaddon.separator": " | ",
   "message.griefloggerrollbackaddon.rollback.usage": "Verwendung: /gl rollback u:<user> t:<zeit (s|m|h|d|M|y)> r:<radius|c<chunks>> [i|b]",
   "message.griefloggerrollbackaddon.rollback.disabled": "Rollback-Addon ist deaktiviert, da beim Start keine Datenbankverbindung verf\u00fcgbar war",
   "message.griefloggerrollbackaddon.rollback.not_initialized": "Rollback-Manager nicht initialisiert",
@@ -22,6 +24,7 @@
   "message.griefloggerrollbackaddon.rollback.scope.blocks_only": "nur Bl\u00f6cke",
   "message.griefloggerrollbackaddon.rollback.scope.items_only": "nur Items",
   "message.griefloggerrollbackaddon.rollback.scope.both": "Bl\u00f6cke + Items",
+  "message.griefloggerrollbackaddon.rollback.triggered_by": "Ausgel\u00f6st von: ",
   "message.griefloggerrollbackaddon.actionbar.done": "Rollback abgeschlossen",
   "message.griefloggerrollbackaddon.actionbar.failed": "Rollback fehlgeschlagen",
   "message.griefloggerrollbackaddon.actionbar.cancelled": "Rollback abgebrochen",
@@ -67,6 +70,12 @@
   "message.griefloggerrollbackaddon.web.token.list.title": "Web-Tokens (Seite %s)",
   "message.griefloggerrollbackaddon.web.token.list.empty": "Keine Tokens vorhanden.",
   "message.griefloggerrollbackaddon.web.token.list.copy_hint": "Zum Kopieren klicken",
+  "message.griefloggerrollbackaddon.web.broadcast.started": "Web-Rollback gestartet",
+  "message.griefloggerrollbackaddon.web.broadcast.blocked": "Webzugriff blockiert",
+  "message.griefloggerrollbackaddon.web.broadcast.ip": "IP: ",
+  "message.griefloggerrollbackaddon.web.broadcast.path": "Pfad: ",
+  "message.griefloggerrollbackaddon.web.broadcast.method": "Methode: ",
+  "message.griefloggerrollbackaddon.web.broadcast.reason": "Grund: ",
   "message.griefloggerrollbackaddon.web.server.started": "Webserver gestartet",
   "message.griefloggerrollbackaddon.web.server.stopped": "Webserver gestoppt",
   "message.griefloggerrollbackaddon.web.server.already_running": "Webserver l\u00e4uft bereits",
